# measurementor

./: index.html  package-lock.json  package.json  vite.config.js
.github/: release-drafter.yml
.github/workflows/: build.yml  release.yml
src/: App.css  App.jsx  helpers.js
src-tauri/: .gitignore  Cargo.toml  build.rs  nsis-extra.nsi  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  oar.rs  ocr.rs  processor.rs  video.rs
src-tauri/src/ocr/: oar.rs  tesseract.rs
src/components/: CanvasPanel.jsx  ui.jsx
