[package]
name = "measurementor"
version = "0.1.0"
description = "Measurementor — OCR measurement extraction from video"
authors = []
edition = "2021"

[lib]
name = "measurementor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "measurementor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
ureq = "2"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25", features = ["jpeg", "png"] }
imageproc = "0.26"
oar-ocr = "0.6"
anyhow = "1"
ffmpeg-next = "7"
rayon = "1"
tesseract = "0.15"
